--- a/index.html
+++ b/index.html
@@ -1,59 +1,35 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Redireccionando a WhatsApp...</title>
-  <meta name="robots" content="noindex, nofollow">
-  <script>
-    function isBot() {
-      const ua = navigator.userAgent.toLowerCase();
-      const botPatterns = [
-        "bot", "crawl", "slurp", "spider", "facebook", "meta", "whatsapp",
-        "headless", "python", "curl", "wget", "axios"
-      ];
-      return botPatterns.some(p => ua.includes(p));
-    }
-
-    function detectHeadless() {
-      return navigator.webdriver || false;
-    }
-
-    function safeRedirect() {
-      const parts = [
-        "aHR0cHM6Ly93YQ==",       // "https://wa"
-        "Lm1lLw==",               // ".me/"
-        "NTQ5MjYxNTA0MDU3NA==",   // número
-        "P3RleHQ9SG9sYSwlMjB2ZW5nbyUyMGRlJTIwbGElMjBwdWJsaWNpZGFk" // "?text=Hola, vengo de la publicidad"
+  <head>
+    <meta charset="UTF-8" />
+    <title>Redirigiendo...</title>
+    <meta name="robots" content="noindex, nofollow" />
+    <script>
+      // Detectar bots de Meta/Facebook/Instagram
+      const bots = [
+        /facebookexternalhit/i,
+        /Facebot/i,
+        /WhatsApp/i,
+        /Meta/i,
+        /Instagram/i
       ];
 
-      function decode(base64) {
-        return decodeURIComponent(atob(base64).split('').map(c =>
-          '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2)
-        ).join(''));
-      }
+      const userAgent = navigator.userAgent;
+      const isBot = bots.some(bot => bot.test(userAgent));
 
-      const url = parts.map(decode).join('');
-      setTimeout(() => eval(`window.location.href = '${url}'`), 1500);
-    }
-
-    window.onload = function () {
-      if (isBot() || detectHeadless()) {
-        // Mostrar pantalla neutral si es un bot
-        document.body.innerHTML = '<p style="text-align:center; margin-top:100px; font-family:sans-serif;">Cargando...</p>';
+      if (!isBot) {
+        // Número completo: 5492615040574
+        const encoded = "NTQ5MjYxNTA0MDU3NA=="; // Base64
+        const decoded = atob(encoded);
+        const mensaje = encodeURIComponent("Hola, vengo por la publicidad");
+        window.location.href = `https://wa.me/${decoded}?text=${mensaje}`;
       } else {
-        safeRedirect();
+        document.write("<h3>Gracias por visitar</h3>");
       }
-    };
-  </script>
-</head>
-<body>
-  <noscript>
-    <p style="text-align: center; margin-top: 100px; font-family: sans-serif;">
-      Esta página requiere JavaScript para continuar.
-    </p>
-  </noscript>
-  <p style="text-align: center; margin-top: 100px; font-family: sans-serif;">
-    Redireccionando a WhatsApp...
-  </p>
-</body>
+    </script>
+  </head>
+  <body>
+    <noscript>Activá JavaScript para continuar.</noscript>
+  </body>
 </html>
+
